--- a/drizzle App/client/package.json
+++ b/drizzle App/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "drizzle-react": "^1.3.0",
+    "ipfs-http-client": "^50.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
