--- a/PaintingsNFT/package.json
+++ b/PaintingsNFT/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.2.0",
     "@truffle/hdwallet-provider": "^1.5.0",
+    "dotenv": "^10.0.0",
     "solc": "^0.8.0"
   }
 }
